--- a/source/style/common/index.scss
+++ b/source/style/common/index.scss
@@ -181,7 +181,7 @@
 
 .copyright{
 	padding-bottom: 16px;
-	font-family: 'roboto_light', Arial, sans-serif;
+	font-family: 'robotolight', Arial, sans-serif;
 	font-size: 16px;
 	color: rgba(242, 243, 244, .8);
 
