--- a/source/style/common/works.scss
+++ b/source/style/common/works.scss
@@ -67,7 +67,7 @@
     order: -10;
     height: auto;
     flex: 1;
-    min-height: 45%;
+    height: 45%;
   }
 }
 
@@ -121,6 +121,7 @@
 
 .slider__item{
   width: 50%;
+  height: 100%;
   position: relative;
   overflow: hidden;
   display: flex;
@@ -128,11 +129,11 @@
 }
 
 .slider__item-pic{
-  max-height: 100%;
+  max-height: 95%;
   display: block;
   margin: 0 auto;
   width: auto;
-  max-width: 100%;
+  max-width: 95%;
 }
 
 .slider__link{
