--- a/source/template/pages/blog.pug
+++ b/source/template/pages/blog.pug
@@ -57,6 +57,8 @@ block content
 				polygon(points="1000,90 500,90 1000,0")
 			.container
 				.nav-blog
+					.nav-blog__toggle
+						a.nav-blog__toggle-link(href='#')
 					ul.nav-blog__list
 						li.nav-blog__item
 							a.nav-blog__link.nav-blog__link_active(href='#')
