--- a/source/template/pages/works.pug
+++ b/source/template/pages/works.pug
@@ -110,7 +110,7 @@ block content
 							.reviews__item-person-block
 								.reviews__item-person-title Сабанцев Владимир
 								.reviews__item-person-role Преподаватель
-			.write-me
+			.write-me.blur
 				.write-me__blur-wrapper
 					.write-me__blur
 					.write-me__form-wrapper
