--- a/source/style/common/blog.scss
+++ b/source/style/common/blog.scss
@@ -25,14 +25,60 @@
 	text-align: right;
 
 	@include tablets{
-    	display: none;
+    	float: none;
+	    position: fixed;
+	    top: 0;
+	    left: -60%;
+	    bottom: 0;
+	    background: #00bfa5;
+	    width: 60%;
+	    z-index: 1;
+	    display: flex;
+	    align-items: center;
+	    transition: $transition;
+	    box-shadow: 3px 0px 3px rgba(#000,.2);
+
+	    &.active{
+	    	left: 0;
+	    }
   	}
+}
+
+.nav-blog__toggle{
+	@include tablets{
+		display: block;
+    	width: 50px;
+    	height: 100px;
+    	background: #00bfa5;
+    	border-radius: 0 50px 50px 0;
+    	box-shadow: 3px 0px 3px -1px rgba(#000,.2);
+    	position: absolute;
+    	top: 50%;
+    	right: -30px;
+    	display: flex;
+    	justify-content: flex-end;
+	}
+}
+
+.nav-blog__toggle-link{
+	@include tablets{
+		display: block;
+		width: 100%;
+    	height: 100%;
+    	z-index: 2;
+	}
 }
 
 .nav-blog__list{
 	display: inline-block;
 	max-width: 271px;
 	line-height: 26px;
+
+	@include tablets{
+    	max-width: 100%;
+    	z-index: 1;
+    	padding: 30px;
+  	}
 }
 
 .nav-blog__link{
@@ -42,14 +88,29 @@
 	transition: $transition;
 	margin-bottom: 5px;
 
+	@include tablets{
+    	color: rgba(255,255,255,.7);
+    	padding:15px 10px;
+    	margin-bottom: 20px;
+    	font-size: 18px;
+  	}
+
 	&_active{
 		border-right: 3px solid #00bfa5;
 		color:#00bfa5;
 		font-family: 'robotobold', Arial, sans-serif;
+
+		@include tablets{
+    		color: #fff;
+  		}
 	}
 
 	&:hover{
 		color:#00bfa5;
+
+		@include tablets{
+    		color: #fff;
+  		}
 	}
 }
 
