--- a/source/template/pages/about.pug
+++ b/source/template/pages/about.pug
@@ -7,6 +7,11 @@ block scripts
 	script(async,defer,src='https://maps.googleapis.com/maps/api/js?key=AIzaSyAKpRZU0C-xlSQxjWMGh9wJm76UKczr9lU&callback=initMap')
 
 block content
+	.preloader
+		.preloader__spinner
+			.preloader__animation
+			.preloader__percents
+				|0%
 	.wrapper_with_footer
 		.fullscreen-menu
 			ul.fullscreen-menu__list
@@ -30,10 +35,10 @@ block content
 							.socials.socials_place_header
 								ul.socials__list.socials__list_color_white
 									li.socials__item
-										a.socials__link(href='https://vk.com', target='_blank')
+										a.socials__link(href='https://vk.com/julia_yakutik', target='_blank')
 											i.fa.fa-vk(aria-hidden='true')
 									li.socials__item
-										a.socials__link(href='https://github.com', target='_blank')
+										a.socials__link(href='https://github.com/YuliyaYakutsik', target='_blank')
 											i.fa.fa-github-alt(aria-hidden='true')
 									li.socials__item
 										a.socials__link(href='https://linkedin.com', target='_blank')
@@ -50,7 +55,7 @@ block content
 						.user.user_position_header
 							.user__photo.user__photo_small
 								img.user__pic(src='assets/img/ava.jpg', alt='Ava')
-							.user__name.user__name_color_white Владимир Астахов
+							.user__name.user__name_color_white Юлия Якутик
 							.user__description.user__description_color_white Личный сайт веб-разработчика
 		section.section.about
 			svg(
@@ -126,22 +131,22 @@ block content
 								a.footer-up__link(href="works.html")
 									|Мои работы
 							li.footer-up__item
-								a.footer-up__link(href="about.html")
+								a.footer-up__link.footer-up__link_active(href="about.html")
 									|Обо мне
 							li.footer-up__item
 								a.footer-up__link(href="blog.html")
 									|Блог
 							li.footer-up__item
-								a.footer-up__link(href="#")
+								a.footer-up__link(href="index.html")
 									|Авторизация
 					.footer-up__right
 						.socials.socials_place_footer
 							ul.socials__list.socials__list_border_circle
 								li.socials__item
-									a.socials__link(href='https://vk.com', target='_blank')
+									a.socials__link(href='https://vk.com/julia_yakutik', target='_blank')
 										i.fa.fa-vk(aria-hidden='true')
 								li.socials__item
-									a.socials__link(href='https://github.com', target='_blank')
+									a.socials__link(href='https://github.com/YuliyaYakutsik', target='_blank')
 										i.fa.fa-github-alt(aria-hidden='true')
 								li.socials__item
 									a.socials__link(href='https://linkedin.com', target='_blank')
@@ -149,9 +154,9 @@ block content
 				.footer-down
 					.footer-down__left
 						.footer__description
-							|Я веб-разработчик из Минска и этот сайт сделал в рамках обучения в Школе онлайн-образования Loftschool.
+							|Я веб-разработчик из Минска и этот сайт сделала в рамках обучения в Школе онлайн-образования Loftschool.
 					.footer-down__right
 						.copyright.copyright_position_left
 							i.fa.fa-copyright(aria-hidden='true')
-							|  Владимир Астахов | Создано с любовью в Loftschool | 2017
+							|  Юлия Якутик | Создано с любовью в Loftschool | 2017
 	
