--- a/source/template/pages/works.pug
+++ b/source/template/pages/works.pug
@@ -4,6 +4,11 @@ block variables
 	- var title = 'Works page'
 
 block content
+	.preloader
+		.preloader__spinner
+			.preloader__animation
+			.preloader__percents
+				|0%
 	.wrapper_with_footer
 		.fullscreen-menu
 			ul.fullscreen-menu__list
@@ -27,10 +32,10 @@ block content
 							.socials.socials_place_header
 								ul.socials__list.socials__list_color_white
 									li.socials__item
-										a.socials__link(href='https://vk.com', target='_blank')
+										a.socials__link(href='https://vk.com/julia_yakutik', target='_blank')
 											i.fa.fa-vk(aria-hidden='true')
 									li.socials__item
-										a.socials__link(href='https://github.com', target='_blank')
+										a.socials__link(href='https://github.com/YuliyaYakutsik', target='_blank')
 											i.fa.fa-github-alt(aria-hidden='true')
 									li.socials__item
 										a.socials__link(href='https://linkedin.com', target='_blank')
@@ -47,7 +52,7 @@ block content
 						.user.user_position_header
 							.user__photo.user__photo_small
 								img.user__pic(src='assets/img/ava.jpg', alt='Ava')
-							.user__name.user__name_color_white Владимир Астахов
+							.user__name.user__name_color_white Юлия Якутик
 							.user__description.user__description_color_white Личный сайт веб-разработчика
 		section.section.works.slider
 			+title('Мои работы', 'works-header.png', 'works__section-title')
@@ -138,7 +143,7 @@ block content
 					.footer-up__left
 						ul.footer-up__list
 							li.footer-up__item
-								a.footer-up__link(href="works.html")
+								a.footer-up__link.footer-up__link_active(href="works.html")
 									|Мои работы
 							li.footer-up__item
 								a.footer-up__link(href="about.html")
@@ -147,16 +152,16 @@ block content
 								a.footer-up__link(href="blog.html")
 									|Блог
 							li.footer-up__item
-								a.footer-up__link(href="#")
+								a.footer-up__link(href="index.html")
 									|Авторизация
 					.footer-up__right
 						.socials.socials_place_footer
 							ul.socials__list.socials__list_border_circle
 								li.socials__item
-									a.socials__link(href='https://vk.com', target='_blank')
+									a.socials__link(href='https://vk.com/julia_yakutik', target='_blank')
 										i.fa.fa-vk(aria-hidden='true')
 								li.socials__item
-									a.socials__link(href='https://github.com', target='_blank')
+									a.socials__link(href='https://github.com/YuliyaYakutsik', target='_blank')
 										i.fa.fa-github-alt(aria-hidden='true')
 								li.socials__item
 									a.socials__link(href='https://linkedin.com', target='_blank')
@@ -164,8 +169,8 @@ block content
 				.footer-down
 					.footer-down__left
 						.footer__description
-							|Я веб-разработчик из Минска и этот сайт сделал в рамках обучения в Школе онлайн-образования Loftschool.
+							|Я веб-разработчик из Минска и этот сайт сделала в рамках обучения в Школе онлайн-образования Loftschool.
 					.footer-down__right
 						.copyright.copyright_position_left
 							i.fa.fa-copyright(aria-hidden='true')
-							|  Владимир Астахов | Создано с любовью в Loftschool | 2017
+							|  Юлия Якутик | Создано с любовью в Loftschool | 2017
