--- a/source/template/pages/blog.pug
+++ b/source/template/pages/blog.pug
@@ -65,18 +65,18 @@ block content
 					.nav-blog__toggle
 						a.nav-blog__toggle-link(href='#')
 					ul.nav-blog__list
-						li.nav-blog__item
-							a.nav-blog__link.nav-blog__link_active(href='#')
+						li.nav-blog__item.active
+							a.nav-blog__link(href='#one')
 								|Самое важное в SASS
 						li.nav-blog__item
-							a.nav-blog__link(href='#')
+							a.nav-blog__link(href='#two')
 								|Приёмы в вёрстке, без которых не обходится ни один сайт
 						li.nav-blog__item
-							a.nav-blog__link(href='#')
+							a.nav-blog__link(href='#three')
 								|Самый необходимый набор Gulp плагинов
 				.content-blog
 					ul.content-blog__list
-						li.content-blog__item
+						li.content-blog__item(data-section="one")
 							.content-blog__item-main
 								.content-blog__item-title
 									|Самое важное в SASS
@@ -105,7 +105,7 @@ block content
 										|
 										|//присвоить
 										|$(document).data(#[span.content-blog__item-code-data_green 'prop'], {anything: #[span.content-blog__item-code-data_green "любой объект"]})
-						li.content-blog__item
+						li.content-blog__item(data-section="two")
 							.content-blog__item-main
 								.content-blog__item-title
 									|Приёмы в вёрстке, без которых не обходится ни один сайт
@@ -115,13 +115,23 @@ block content
 									|Lorem ipsum dolor sit amet, consectetur |adipisicing elit. Pariatur fuga voluptatum |sequi quis, blanditiis facilis, in id |labore officiis officia placeat, culpa |dolorum cum quas eaque dolore soluta iste |maiores doloribus omnis voluptate. Sapiente |temporibus ratione facilis doloribus enim |reiciendis porro a earum animi cum, ipsa |omnis cumque dolore excepturi?
 									|Lorem ipsum dolor sit amet, consectetur |adipisicing elit. Pariatur fuga voluptatum |sequi quis, blanditiis facilis, in id |labore officiis officia placeat, culpa |dolorum cum quas eaque dolore soluta iste |maiores doloribus omnis voluptate. Sapiente |temporibus ratione facilis doloribus enim |reiciendis porro a earum animi cum, ipsa |omnis cumque dolore excepturi?
 									|Lorem ipsum dolor sit amet, consectetur |adipisicing elit. Pariatur fuga voluptatum |sequi quis, blanditiis facilis, in id |labore officiis officia placeat, culpa |dolorum cum quas eaque dolore soluta iste |maiores doloribus omnis voluptate. Sapiente |temporibus ratione facilis doloribus enim |reiciendis porro a earum animi cum, ipsa |omnis cumque dolore excepturi?
-						li.content-blog__item
+						li.content-blog__item(data-section="three")
 							.content-blog__item-main
 								.content-blog__item-title
 									|Самый необходимый набор Gulp плагинов
 								.content-blog__item-date
 									|22 ноября 2016
 								.content-blog__item-text
+									|Lorem ipsum dolor sit amet, consectetur |adipisicing elit. Pariatur fuga voluptatum |sequi quis, blanditiis facilis, in id |labore officiis officia placeat, culpa |dolorum cum quas eaque dolore soluta iste |maiores doloribus omnis voluptate. Sapiente |temporibus ratione facilis doloribus enim |reiciendis porro a earum animi cum, ipsa |omnis cumque dolore excepturi?
+									|Lorem ipsum dolor sit amet, consectetur |adipisicing elit. Pariatur fuga voluptatum |sequi quis, blanditiis facilis, in id |labore officiis officia placeat, culpa |dolorum cum quas eaque dolore soluta iste |maiores doloribus omnis voluptate. Sapiente |temporibus ratione facilis doloribus enim |reiciendis porro a earum animi cum, ipsa |omnis cumque dolore excepturi?
+									|Lorem ipsum dolor sit amet, consectetur |adipisicing elit. Pariatur fuga voluptatum |sequi quis, blanditiis facilis, in id |labore officiis officia placeat, culpa |dolorum cum quas eaque dolore soluta iste |maiores doloribus omnis voluptate. Sapiente |temporibus ratione facilis doloribus enim |reiciendis porro a earum animi cum, ipsa |omnis cumque dolore excepturi?
+									|Lorem ipsum dolor sit amet, consectetur |adipisicing elit. Pariatur fuga voluptatum |sequi quis, blanditiis facilis, in id |labore officiis officia placeat, culpa |dolorum cum quas eaque dolore soluta iste |maiores doloribus omnis voluptate. Sapiente |temporibus ratione facilis doloribus enim |reiciendis porro a earum animi cum, ipsa |omnis cumque dolore excepturi?
+									|Lorem ipsum dolor sit amet, consectetur |adipisicing elit. Pariatur fuga voluptatum |sequi quis, blanditiis facilis, in id |labore officiis officia placeat, culpa |dolorum cum quas eaque dolore soluta iste |maiores doloribus omnis voluptate. Sapiente |temporibus ratione facilis doloribus enim |reiciendis porro a earum animi cum, ipsa |omnis cumque dolore excepturi?
+									|Lorem ipsum dolor sit amet, consectetur |adipisicing elit. Pariatur fuga voluptatum |sequi quis, blanditiis facilis, in id |labore officiis officia placeat, culpa |dolorum cum quas eaque dolore soluta iste |maiores doloribus omnis voluptate. Sapiente |temporibus ratione facilis doloribus enim |reiciendis porro a earum animi cum, ipsa |omnis cumque dolore excepturi?
+									|Lorem ipsum dolor sit amet, consectetur |adipisicing elit. Pariatur fuga voluptatum |sequi quis, blanditiis facilis, in id |labore officiis officia placeat, culpa |dolorum cum quas eaque dolore soluta iste |maiores doloribus omnis voluptate. Sapiente |temporibus ratione facilis doloribus enim |reiciendis porro a earum animi cum, ipsa |omnis cumque dolore excepturi?
+									|Lorem ipsum dolor sit amet, consectetur |adipisicing elit. Pariatur fuga voluptatum |sequi quis, blanditiis facilis, in id |labore officiis officia placeat, culpa |dolorum cum quas eaque dolore soluta iste |maiores doloribus omnis voluptate. Sapiente |temporibus ratione facilis doloribus enim |reiciendis porro a earum animi cum, ipsa |omnis cumque dolore excepturi?
+									|Lorem ipsum dolor sit amet, consectetur |adipisicing elit. Pariatur fuga voluptatum |sequi quis, blanditiis facilis, in id |labore officiis officia placeat, culpa |dolorum cum quas eaque dolore soluta iste |maiores doloribus omnis voluptate. Sapiente |temporibus ratione facilis doloribus enim |reiciendis porro a earum animi cum, ipsa |omnis cumque dolore excepturi?
+									|Lorem ipsum dolor sit amet, consectetur |adipisicing elit. Pariatur fuga voluptatum |sequi quis, blanditiis facilis, in id |labore officiis officia placeat, culpa |dolorum cum quas eaque dolore soluta iste |maiores doloribus omnis voluptate. Sapiente |temporibus ratione facilis doloribus enim |reiciendis porro a earum animi cum, ipsa |omnis cumque dolore excepturi?
 									|Lorem ipsum dolor sit amet, consectetur |adipisicing elit. Pariatur fuga voluptatum |sequi quis, blanditiis facilis, in id |labore officiis officia placeat, culpa |dolorum cum quas eaque dolore soluta iste |maiores doloribus omnis voluptate. Sapiente |temporibus ratione facilis doloribus enim |reiciendis porro a earum animi cum, ipsa |omnis cumque dolore excepturi?
 									|Lorem ipsum dolor sit amet, consectetur |adipisicing elit. Pariatur fuga voluptatum |sequi quis, blanditiis facilis, in id |labore officiis officia placeat, culpa |dolorum cum quas eaque dolore soluta iste |maiores doloribus omnis voluptate. Sapiente |temporibus ratione facilis doloribus enim |reiciendis porro a earum animi cum, ipsa |omnis cumque dolore excepturi?
 									|Lorem ipsum dolor sit amet, consectetur |adipisicing elit. Pariatur fuga voluptatum |sequi quis, blanditiis facilis, in id |labore officiis officia placeat, culpa |dolorum cum quas eaque dolore soluta iste |maiores doloribus omnis voluptate. Sapiente |temporibus ratione facilis doloribus enim |reiciendis porro a earum animi cum, ipsa |omnis cumque dolore excepturi?
