--- a/source/style/common/index.scss
+++ b/source/style/common/index.scss
@@ -21,6 +21,10 @@
     height: 392px;
     transform-style: preserve-3d;
     transition: 2s;
+
+    @include album{
+      	height: 308px;
+    }
 }
 
 .flipper.active{
@@ -32,8 +36,12 @@
     position: absolute;
     border-radius: 0.3125rem;
     width: 382px;
-    height: 393px;
+    height: 392px;
     overflow: hidden;
+
+    @include album{
+      	height: 308px;
+    }
 }
 
 .content__index{
@@ -163,6 +171,10 @@
 	padding: 0 20px;
   	padding-bottom: 35px;
   	font-family: 'robotoregular', Arial, sans-serif;
+
+  	@include album{
+      padding-bottom: 10px;
+    }
 }
 
 .authorization__form-element{
@@ -181,6 +193,10 @@
 .authorization__form-block-wrapper{
 	display: flex;
 	margin-bottom: 20px;
+
+	@include album{
+      margin-bottom: 10px;
+    }
 }
 
 .authorization__form-label{
@@ -196,6 +212,10 @@
 
 .authorization__form-checkbox-wrapper{
 	margin-bottom: 20px;
+
+	@include album{
+      margin-bottom: 10px;
+    }
 }
 
 .authorization__form-checkbox{
@@ -290,6 +310,10 @@
   	&:hover{
 	    background: #009688;
 	}
+
+	@include album{
+      padding: 13px 15px;
+    }
 }
 
 .authorization__form-button_back{
