--- a/source/style/common/works.scss
+++ b/source/style/common/works.scss
@@ -109,7 +109,7 @@
   vertical-align: middle;
 }
 
-.slider__list{
+.slider__other-slides{
   display: flex;
   width: 50%;
   height: 30%;
@@ -119,13 +119,36 @@
   }
 }
 
-.slider__item{
+.slider__display{
   width: 50%;
   height: 100%;
   position: relative;
   overflow: hidden;
   display: flex;
   align-items: center;
+}
+
+.slider__list{
+  height: 100%;
+  width: 100%;
+  position: relative;
+}
+
+.slider__item{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: -100%;
+  display: flex;
+  align-items: center;
+
+  &_opposite{
+    top: 100%;
+  }
+
+  &.active{
+    top: 0%;
+  }
 }
 
 .slider__item-pic{
