--- a/source/style/common/works.scss
+++ b/source/style/common/works.scss
@@ -327,6 +327,15 @@
   margin: 0 auto;
 }
 
+.reviews-form__messages{
+  position: relative;
+  color: red;
+}
+
+.reviews-form__messages-element{
+  display: none;
+}
+
 .write-me__blur-wrapper{
   width: 100%;
   height: 100%;
@@ -368,11 +377,16 @@
   padding: 8px;
   border-radius: 6px;
   border: 2px solid transparent;
+  transition: $transition;
 
   &:focus{
     outline: none;
     border: 2px solid #009688;
   }
+}
+
+.input-alert{
+  border: 2px solid red;
 }
 
 .reviews__form-textarea{
