--- a/source/template/pages/works.pug
+++ b/source/template/pages/works.pug
@@ -129,7 +129,7 @@ block content
 								i.fa.fa-chevron-up(aria-hidden='true')
 		+title('Что обо мне говорят', 'about-header.png', 'reviews-title')
 		section.section.last.reviews
-			a(href="#document").up-arrow
+			a(href="#").up-arrow
 					i.fa.fa-chevron-up(aria-hidden='true')
 			.reviews__background
 				img.reviews__background-pic(src='assets/img/reviews.jpg')
@@ -155,25 +155,25 @@ block content
 							.reviews__item-person-block
 								.reviews__item-person-title Сабанцев Владимир
 								.reviews__item-person-role Преподаватель
+			.reviews-form__messages
+				.reviews-form__messages-element.reviews-form__messages-alert#emptyFieldsDanger
+					|Пожалуйста, заполните все поля в форме! 
+				.reviews-form__messages-element.reviews-form__messages-alert#onChecking
+					|Происходит обработка запроса! Пожалуйста, подождите! 
+				.reviews-form__messages-element#success
+					|Ваше сообщение отправлено!
+				.reviews-form__messages-element#error
+					|Извините, произошла ошибка. Пожалуйста, повторите отправку формы!
 			.write-me.blur
 				.write-me__blur-wrapper
 					.write-me__blur
 					.write-me__form-wrapper
 						+title__small('Связаться со мной', 'about__section-title_small')
 						form.reviews__form#reviews__form(method="POST")
-							.reviews-form__messages
-								#emptyFieldsDanger.alert.alert-danger(style="display: none") 
-									|Пожалуйста, заполните все поля в форме! 
-								#onChecking.alert.alert-danger(style="display: none")
-									|Происходит обработка запроса! Пожалуйста, подождите! 
-								#success(style="display: none")
-									|Ваше сообщение отправлено!
-								#error(style="display: none")
-									|Извините, произошла ошибка. Пожалуйста, повторите отправку формы!
 							.reviews__form-inputs
 								input.reviews__form-input.reviews__form-element(name="name", type="text", id="sendName", placeholder='Имя')
 								input.reviews__form-input.reviews__form-element(name="email", type="email", id="sendEmail", placeholder='Email')
-								textarea.reviews__form-textarea.reviews__form-element(name="message", id="sendMessage", placeholder='Ваше сообщение')
+								textarea.reviews__form-textarea.reviews__form-element(name="text", id="sendText", placeholder='Ваше сообщение')
 							.reviews__form-buttons
 								input.reviews__form-button(name="", type="submit", value="Отправить")
 								input.reviews__form-button.reviews__form-button-reset(name="", type="reset" value="Очистить")
