--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -27,7 +27,7 @@ block content
 								.user__photo
 									img.user__pic(src='assets/img/ava.jpg', alt='Ava')
 								.user__name Юлия Якутик
-								.user__description Личный сайт веб разработчика
+								.user__description Личный сайт веб-разработчика
 						.socials.socials_place_main
 							ul.socials__list.socials__list_color_green
 								li.socials__item
