--- a/source/style/common/style.scss
+++ b/source/style/common/style.scss
@@ -55,7 +55,12 @@ a{
 	color:inherit;
 }
 
-
+input[type="button"],
+input[type="reset"],
+input[type="submit"] {
+  -webkit-appearance: none; 
+  border-radius: 0;
+}
 
 .wrapper{
 	text-align: center;
