--- a/source/style/common/works.scss
+++ b/source/style/common/works.scss
@@ -245,6 +245,7 @@
   font-family: 'robotoregular', Arial, sans-serif;
   padding-top: 55px;
   margin-bottom: 10px;
+  position: relative;
   background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(255,255,255,1) 82%, rgba(255,255,255,0) 100%); /* FF3.6-15 */
   background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(255,255,255,1) 82%,rgba(255,255,255,0) 100%); /* Chrome10-25,Safari5.1-6 */
   background: linear-gradient(to bottom, rgba(255,255,255,1) 0%,rgba(255,255,255,1) 82%,rgba(255,255,255,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
@@ -327,11 +328,6 @@
   margin: 0 auto;
 }
 
-.reviews-form__messages{
-  position: relative;
-  color: red;
-}
-
 .reviews-form__messages-element{
   display: none;
 }
@@ -365,7 +361,7 @@
 .reviews__form-status{
   margin-top:-1rem;
   height: 1.2rem;
-  color: red;
+  color: #00bfa5;
 }
 
 .reviews__form-inputs{
