--- a/views/pages/about.pug
+++ b/views/pages/about.pug
@@ -42,7 +42,7 @@ block content
 										a.socials__link(href='https://github.com/YuliyaYakutsik', target='_blank')
 											i.fa.fa-github-alt(aria-hidden='true')
 									li.socials__item
-										a.socials__link(href='https://linkedin.com', target='_blank')
+										a.socials__link(href='https://www.linkedin.com/in/yuliya-yakutsik-b10aa4139/', target='_blank')
 											i.fa.fa-linkedin(aria-hidden='true')
 						.header-up__right
 							.burger-menu
@@ -78,7 +78,7 @@ block content
 						+title__small('Кто я', 'about__section-title_small')
 					.user-about__text
 						p Я веб разработчик из Новосибирска. Мне 27 лет. Я занимаюсь разработкой современных сайтов и приложений. Мне нравится делать интересные и современные проекты.
-						p Я веб разработчик из Новосибирска. Мне 27 лет. Я занимаюсь разработкой современных сайтов и приложений. Мне нравится делать интересные и современные проекты.
+						p Сейчас я нахожусь в самом начале своего пути в сфере IT. Поэтому стараюсь постоянно развиваться и изучать что-то новое. Буду очень рада, если вы захотите со мной сотрудничать! С моей стороны - полная отдача и желание все сделать так, как Вы захотите!
 			.about__right
 				svg(
 					viewbox="0 0 1000 180"
@@ -111,10 +111,10 @@ block content
 					ul.contacts-socials__list
 						li.contacts-socials__item
 							i.fa.fa-skype.contacts-socials__icon(aria-hidden='true') 
-							.contacts-socials__text skype_kdn
+							.contacts-socials__text Yuliya Yakutsik
 						li.contacts-socials__item
 							i.fa.fa-envelope.contacts-socials__icon(aria-hidden='true') 
-							.contacts-socials__text astahov@gmail.com
+							.contacts-socials__text juliayakutik@gmail.com
 						li.contacts-socials__item
 							i.fa.fa-phone.contacts-socials__icon(aria-hidden='true')
 							.contacts-socials__text +375 29 178 90 10
@@ -148,7 +148,7 @@ block content
 									a.socials__link(href='https://github.com/YuliyaYakutsik', target='_blank')
 										i.fa.fa-github-alt(aria-hidden='true')
 								li.socials__item
-									a.socials__link(href='https://linkedin.com', target='_blank')
+									a.socials__link(href='https://www.linkedin.com/in/yuliya-yakutsik-b10aa4139/', target='_blank')
 										i.fa.fa-linkedin(aria-hidden='true')
 				.footer-down
 					.footer-down__left
