--- a/views/pages/blog.pug
+++ b/views/pages/blog.pug
@@ -39,7 +39,7 @@ block content
 										a.socials__link(href='https://github.com/YuliyaYakutsik', target='_blank')
 											i.fa.fa-github-alt(aria-hidden='true')
 									li.socials__item
-										a.socials__link(href='https://linkedin.com', target='_blank')
+										a.socials__link(href='https://www.linkedin.com/in/yuliya-yakutsik-b10aa4139/', target='_blank')
 											i.fa.fa-linkedin(aria-hidden='true')
 						.header-up__right
 							.burger-menu
@@ -178,7 +178,7 @@ block content
 							a.socials__link(href='https://github.com/YuliyaYakutsik', target='_blank')
 								i.fa.fa-github-alt(aria-hidden='true')
 						li.socials__item
-							a.socials__link(href='https://linkedin.com', target='_blank')
+							a.socials__link(href='https://www.linkedin.com/in/yuliya-yakutsik-b10aa4139/', target='_blank')
 								i.fa.fa-linkedin(aria-hidden='true')
 		.footer-down
 			.footer-down__left
