--- a/views/pages/works.pug
+++ b/views/pages/works.pug
@@ -39,7 +39,7 @@ block content
 										a.socials__link(href='https://github.com/YuliyaYakutsik', target='_blank')
 											i.fa.fa-github-alt(aria-hidden='true')
 									li.socials__item
-										a.socials__link(href='https://linkedin.com', target='_blank')
+										a.socials__link(href='https://www.linkedin.com/in/yuliya-yakutsik-b10aa4139/', target='_blank')
 											i.fa.fa-linkedin(aria-hidden='true')
 						.header-up__right
 							.burger-menu
@@ -153,7 +153,7 @@ block content
 					li.reviews__item
 						i.fa.fa-quote-left(aria-hidden='true').reviews__item-quote
 						.reviews__item-text 
-							|Этот парень проходил обучение веб-разработке не где-то, а в Loftschool! 2 месяца только самых тяжелых испытаний и бессонных ночей!
+							|Юля проходила обучение веб-разработке не где-то, а в Loftschool! 2 месяца только самых тяжелых испытаний и бессонных ночей!
 						.reviews__item-person
 							.reviews-person__photo
 								img.reviews-person__photo-pic(src='assets/img/teacher.jpg')
@@ -220,7 +220,7 @@ block content
 									a.socials__link(href='https://github.com/YuliyaYakutsik', target='_blank')
 										i.fa.fa-github-alt(aria-hidden='true')
 								li.socials__item
-									a.socials__link(href='https://linkedin.com', target='_blank')
+									a.socials__link(href='https://www.linkedin.com/in/yuliya-yakutsik-b10aa4139/', target='_blank')
 										i.fa.fa-linkedin(aria-hidden='true')
 				.footer-down
 					.footer-down__left
