--- a/source/style/common/blog.scss
+++ b/source/style/common/blog.scss
@@ -37,7 +37,7 @@
 	    top: 0;
 	    left: -60%;
 	    bottom: 0;
-	    background: #00bfa5;
+	    background: $green;
 	    width: 60%;
 	    z-index: 1;
 	    display: flex;
@@ -59,7 +59,7 @@
 		display: block;
     	width: 50px;
     	height: 100px;
-    	background: #00bfa5;
+    	background: $green;
     	border-radius: 0 50px 50px 0;
     	box-shadow: 3px 0px 3px -1px rgba(#000,.2);
     	position: absolute;
@@ -106,8 +106,8 @@
 	&.active{
 
 		.nav-blog__link{
-			border-right: 3px solid #00bfa5;
-			color:#00bfa5;
+			border-right: 3px solid $green;
+			color:$green;
 			font-family: 'robotobold', Arial, sans-serif;
 
 			@include tablets{
@@ -132,7 +132,7 @@
   	}
 
 	&:hover{
-		color:#00bfa5;
+		color:$green;
 
 		@include tablets{
     		color: #fff;
@@ -205,7 +205,7 @@
 
 .content-blog__item-date{
 	padding: 20px 0;
-	color: #00bfa5;
+	color: $green;
 }
 
 .content-blog__item-code{
