--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -37,7 +37,7 @@ block content
 									a.socials__link(href='https://github.com/YuliyaYakutsik', target='_blank')
 										i.fa.fa-github-alt(aria-hidden='true')
 								li.socials__item
-									a.socials__link(href='https://linkedin.com', target='_blank')
+									a.socials__link(href='https://www.linkedin.com/in/yuliya-yakutsik-b10aa4139/', target='_blank')
 										i.fa.fa-linkedin(aria-hidden='true')
 					.nav
 						ul.nav__list
